--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>    
     TEST IFRAME ONLINE BOOKINGS
     <div id="online-booking-wrapp">
-        <iframe height="1000"  src="https://lindop.service123.co.uk/" width="100%"></iframe>
+        <iframe height="1000"  src="https://demosite.edynamix-global.com/" width="100%"></iframe>
     </div>
 </body>
 </html>
