--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script src="jquery-3.4.1.min.js"></script>
+</head>
 <body>    
     TEST IFRAME ONLINE BOOKINGS
+  
+    <div class = "test123" style="display:none"></div>
     <div id="online-booking-wrapp">
         <iframe height="1000" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts allow-presentation allow-top-navigation-by-user-activation allow-storage-access-by-user-activation" src="https://demosite.service123.co.uk/" width="100%"></iframe>
     </div>
+    
+      <script>
+        $(".test123").load("https://demosite.service123.co.uk/");
+    </script>
+    
 </body>
 </html>
