--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
     <div class = "test123" style="display:none"></div>
     <div id="online-booking-wrapp12">
-        <iframe height="1000" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" src="https://demosite.service123.co.uk/" width="100%"></iframe>
+        <iframe height="1000" src="https://demosite.service123.co.uk/" width="100%"></iframe>
     </div>   
   
     
