--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 <script src="jquery-3.4.1.min.js"></script>
+
+    <script>
+
+    </script>
+    
 </head>
 <body>    
-    TEST IFRAME ONLINE BOOKINGS
-  
+    TEST IFRAME ONLINE BOOKINGS  
     <div class = "test123" style="display:none"></div>
     <div id="online-booking-wrapp12">
-        <iframe height="1000" src="https://demosite.service123.co.uk/" width="100%"></iframe>
-    </div>   
-  
-    
+        <iframe class="iframe" id="iframe" height="1000" src="https://demosite.service123.co.uk/" width="100%"></iframe>
+    </div>
 </body>
 </html>
