--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="jquery-3.4.1.min.js"></script>
 
     <script>
-
+        document.cookie = "cookies-policy=true; BNI_persistence=BN6x-KgZfMrKdwpiOpUwyUlfV-iWMga6T4haGyp1D9EbDaUZGFEvK5jctKas3xMgseddMwXEB1pcjg6ArNkhOw==";
     </script>
     
 </head>
