--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
     <script>
-        document.cookie = "cookies-policy=true; BNI_persistence=BN6x-KgZfMrKdwpiOpUwyUlfV-iWMga6T4haGyp1D9EbDaUZGFEvK5jctKas3xMgseddMwXEB1pcjg6ArNkhOw==";
+        document.cookie = "BNI_persistence=BN6x-KgZfMrKdwpiOpUwyUlfV-iWMga6T4haGyp1D9EbDaUZGFEvK5jctKas3xMgseddMwXEB1pcjg6ArNkhOw==; cookies-policy=true; BNI_persistence=BN6x-KgZfMrKdwpiOpUwyUlfV-iWMga6T4haGyp1D9EbDaUZGFEvK5jctKas3xMgseddMwXEB1pcjg6ArNkhOw==; ASP.NET_SessionId=q1issnycprue535123mwp5hz; BNES_ASP.NET_SessionId=y8+sBik6+WDTS8qkIwwo7NDb1wfOkgj1YekV+6AkVzRag0vsjypmwWSfOUa5iOoEDJhRQdQeB5BC2xgUVVbjMA3don3JnSXq8l5kawKeXrw=";
     </script>
     
 </head>
