--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          expire.setTime(today.getTime() + 3600000 * 24 * nDays);
         
         document.cookie += "BNI_persistence=BN6x-KgZfMrKdwpiOpUwyUlfV-iWMga6T4haGyp1D9EbDaUZGFEvK5jctKas3xMgseddMwXEB1pcjg6ArNkhOw==;expires=" + expire.toGMTString() + ";path=/"; 
-        document.cookie += "cookies-policy=true;"
+        document.cookie += "cookies-policy=true;expires=" + expire.toGMTString() + ";path=/";
         document.cookie += "BNI_persistence=BN6x-KgZfMrKdwpiOpUwyUlfV-iWMga6T4haGyp1D9EbDaUZGFEvK5jctKas3xMgseddMwXEB1pcjg6ArNkhOw==;expires=" + expire.toGMTString() + ";path=/";
         document.cookie += "ASP.NET_SessionId=q1issnycprue535123mwp5hz;expires=" + expire.toGMTString() + ";path=/";
         document.cookie += "BNES_ASP.NET_SessionId=y8+sBik6+WDTS8qkIwwo7NDb1wfOkgj1YekV+6AkVzRag0vsjypmwWSfOUa5iOoEDJhRQdQeB5BC2xgUVVbjMA3don3JnSXq8l5kawKeXrw=;expires=" + expire.toGMTString() + ";path=/";
