--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     TEST IFRAME ONLINE BOOKINGS  
     <div class = "test123" style="display:none"></div>
     <div id="online-booking-wrapp12">
-        <iframe class="iframe" id="iframe" height="1000" src="https://demosite.edynamix-global.com/" width="100%"></iframe>
+        <iframe class="iframe" id="iframe" height="1000" src="https://demosite.service123.co.uk/" width="100%"></iframe>
     </div>
 </body>
 </html>
