--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         function getWhatever() {
             // strUrl is whatever URL you need to call
             var strUrl = "https://demosite.service123.co.uk", strReturn = "";
-
+            console.log("getWhatever");
             jQuery.ajax({
               url: strUrl,
               dataType: 'jsonp',
