--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             return strReturn;
         }
 
-        getWhatever();
+        //getWhatever();
         
         function setCookie(name, value, options = {}) {
 
