--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     TEST IFRAME ONLINE BOOKINGS  
     <div class = "test123" style="display:none"></div>
     <div id="online-booking-wrapp12">
-        <iframe class="iframe" id="iframe" height="1000" src="https://lindop.edynamix-global.com/" width="100%"></iframe>
+        <iframe class="iframe" id="iframe" height="1000" src="https://parkwaygroup.edynamix-global.com/" width="100%"></iframe>
     </div>
 </body>
 </html>
