--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+m<!DOCTYPE html>
 <html>
 <body style="margin: 0; padding: 0">
 	<div id="online-booking-wrapp">
@@ -6,7 +6,7 @@
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.devservice123.com/serviceplan/quote/';
+		var url = 'https://demosite.edynamix-global.com/serviceplan/quote/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
