--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 m<!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, user-scalable=no" />
 <body style="margin: 0; padding: 0">
 	<div id="online-booking-wrapp">
 	</div>
