--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 m<!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	</head>
+
 <body style="margin: 0; padding: 0">
 	<div id="online-booking-wrapp">
 	</div>
