--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ m<!DOCTYPE html>
 			formatedParam = queryParams.replace('=', '/');
 			url += formatedParam;
 
-			$('html, body').animate({
-				scrollTop: $('#online-booking').offset().top
-			}, 500);
+			//$('html, body').animate({
+			//	scrollTop: $('#online-booking').offset().top
+			//}, 500);
 		}
 
 		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
