--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ m<!DOCTYPE html>
 
 <body style="margin: 0; padding: 0">
 	<div id="online-booking-wrapp">
+		<object id="online-booking" data="https://demosite.edynamix-global.com/serviceplan/quote/"  style="width:100%; height:99vh"></object>
 	</div>
 	<script>
 	(function () {
@@ -23,7 +24,7 @@ m<!DOCTYPE html>
 			}, 500);
 		}
 
-		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
+		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 	})();
 	</script>
 </body>
