--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@ m<!DOCTYPE html>
 			}, 500);
 		}
 
-		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
+		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
+		
+		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
+	
+		
 	})();
 	</script>
 </body>
