--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ m<!DOCTYPE html>
 
 <body style="margin: 0; padding: 0">
 	<div id="online-booking-wrapp">
-	
+	<iframe id="online-booking" src="https://demosite.edynamix-global.com/serviceplan/quote/"  style="width:100%; height:99vh"></iframe>
 	</div>
 	<script>
 	(function () {
@@ -26,7 +26,7 @@ m<!DOCTYPE html>
 
 		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 		
-		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
+		//bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
 	
 		
 	})();
