--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ m<!DOCTYPE html>
 
 <body style="margin: 0; padding: 0">
 	<div id="online-booking-wrapp">
-	<iframe id="online-booking" src="https://demosite.edynamix-global.com/"  style="width:100%; height:99vh"></iframe>
+	<iframe id="online-booking" src="https://parkwaygroup.edynamix-global.com/"  style="width:100%; height:99vh"></iframe>
 	</div>
 	<script>
 	(function () {
