--- a/global.html
+++ b/global.html
@@ -5,6 +5,7 @@
 	</head>
 
 <body style="margin: 0; padding: 0">
+TEST GLOBAL IFRAME
 	<div id="online-booking-wrapp">
 	<iframe id="online-booking" src="https://parkwaygroup.edynamix-global.co.uk/"  style="width:100%; height:99vh"></iframe>
 	</div>
