--- a/global.html
+++ b/global.html
@@ -7,7 +7,7 @@
 <body style="margin: 0; padding: 0">
 TEST GLOBAL IFRAME
 	<div id="online-booking-wrapp">
-	<iframe id="online-booking" src="https://parkwaygroup.edynamix-global.com/"  style="width:100%; height:99vh"></iframe>
+	<iframe id="online-booking" src="https://demosite.edynamix-global.com/serviceplan/quote"  style="width:100%; height:99vh"></iframe>
 	</div>
 	<script>
 	(function () {
