--- a/global.html
+++ b/global.html
@@ -6,8 +6,7 @@
 
 <body style="margin: 0; padding: 0">
 TEST GLOBAL IFRAME
-	<div id="online-booking-wrapp">
-	<iframe id="online-booking" src="https://demosite.edynamix-global.com/serviceplan/quote"  style="width:100%; height:99vh"></iframe>
+	<div id="online-booking-wrapp">	
 	</div>
 	<script>
 	(function () {
@@ -27,7 +26,7 @@ TEST GLOBAL IFRAME
 
 		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 		
-		//bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
+		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
 	
 		
 	})();
