--- a/global.html
+++ b/global.html
@@ -24,9 +24,9 @@ TEST GLOBAL IFRAME
 			formatedParam = queryParams.replace('=', '/');
 			url += formatedParam;
 
-			$('html, body').animate({
-				scrollTop: $('#online-booking').offset().top
-			}, 500);
+			//$('html, body').animate({
+			//	scrollTop: $('#online-booking').offset().top
+			//}, 500);
 		}
 
 		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
