--- a/live.html
+++ b/live.html
@@ -11,7 +11,7 @@ TEST LIVE IFRAME
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://researchgg.service123.co.uk/';
+		var url = 'https://researchgg.service123.co.uk';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
