--- a/live.html
+++ b/live.html
@@ -25,8 +25,8 @@ TEST LIVE IFRAME
 			//}, 500);
 		}
 
-		bookingWrappObject.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
-		//bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>';	
+		//bookingWrappObject.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
+		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>';	
 		
 	})();
 	</script>
