--- a/live.html
+++ b/live.html
@@ -12,7 +12,7 @@ TEST LIVE IFRAME
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.service123.co.uk/serviceplan/quote/';
+		var url = 'https://demosite.service123.co.uk/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 		//var bookingWrappObject = document.getElementById('online-booking-wrapp-object');
