--- a/live.html
+++ b/live.html
@@ -26,7 +26,7 @@ TEST LIVE IFRAME
 		}
 
 		//bookingWrappObject.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
-		bookingWrapp.innerHTML = '<object id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></object>';	
+		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>';	
 		
 	})();
 	</script>
