--- a/global-ob.html
+++ b/global-ob.html
@@ -5,7 +5,7 @@
 	</head>
 	
 <body style="margin: 0; padding: 0">
-TEST GLOBAL IFRAME
+TEST OB GLOBAL IFRAME
 	<div id="online-booking-wrapp">	
 	</div>
 	<script>
