--- a/global-ob.html
+++ b/global-ob.html
@@ -11,7 +11,7 @@ TEST OB GLOBAL IFRAME
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://parkwaygroup.edynamix-global.com';
+		var url = 'https://demosite.edynamix-global.com';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
