--- a/live-ob.html
+++ b/live-ob.html
@@ -5,13 +5,13 @@
 	</head>
 	
 <body style="margin: 0; padding: 0">
-TEST OB LIVE IFRAME
+ Online Booking LIVE Iframe example
 	<div id="online-booking-wrapp">	
 	</div>
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.service123.co.uk/';
+		var url = 'https://johnroe.service123.co.uk/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
