--- a/live-ob.html
+++ b/live-ob.html
@@ -11,7 +11,7 @@
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://johnroe.service123.co.uk/';
+		var url = 'https://demosite.service123.co.uk/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
@@ -19,14 +19,12 @@
 			formatedParam = queryParams.replace('=', '/');
 			url += formatedParam;
 
-			//$('html, body').animate({
-			//	scrollTop: $('#online-booking').offset().top
-			//}, 500);
+			$('html, body').animate({
+				scrollTop: $('#online-booking').offset().top
+			}, 500);
 		}
 
-		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
-		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'	
-		
+		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 	})();
 	</script>
 </body>
