--- a/live-ob.html
+++ b/live-ob.html
@@ -11,7 +11,7 @@
 	<script>
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.service123.co.uk/';
+		var url = 'https://johnroe.service123.co.uk/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
