--- a/global.html
+++ b/global.html
@@ -6,28 +6,29 @@
 	
 <body style="margin: 0; padding: 0">
 TEST GLOBAL IFRAME
-	<div id="online-booking-wrapp">	
+ <!DOCTYPE html>
+<html>
+ 
+	<div id="online-booking-wrapp">
+
 	</div>
 	<script>
+
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.edynamix-global.com/serviceplan/quote/';
+		var url = 'https://demosite.edynamix-global.com/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
-		if (queryParams) {
+		if (queryParams && queryParams.indexOf('Amend')!=-1) {
 			formatedParam = queryParams.replace('=', '/');
-			url += formatedParam;
-
-			//$('html, body').animate({
-			//	scrollTop: $('#online-booking').offset().top
-			//}, 500);
+			url += formatedParam;			 
 		}
 
-		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
-		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'	
-		
+		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 	})();
 	</script>
+ 
+</html>
 </body>
 </html>
