--- a/global.html
+++ b/global.html
@@ -16,7 +16,7 @@ TEST GLOBAL IFRAME
 
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.edynamix-global.com/';
+		var url = 'https://demosite.edynamix-global.com/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
