--- a/global.html
+++ b/global.html
@@ -9,23 +9,27 @@ TEST GLOBAL IFRAME
  <!DOCTYPE html>
 <html>
  
-	<div id="online-booking-wrapp">
-
+	<div id="online-booking-wrapp">	
 	</div>
 	<script>
-
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
 		var url = 'https://demosite.edynamix-global.com/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
-		if (queryParams && queryParams.indexOf('Amend')!=-1) {
+		if (queryParams) {
 			formatedParam = queryParams.replace('=', '/');
-			url += formatedParam;			 
+			url += formatedParam;
+
+			//$('html, body').animate({
+			//	scrollTop: $('#online-booking').offset().top
+			//}, 500);
 		}
 
-		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
+		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
+		bookingWrapp.innerHTML = '<iframe sandbox id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
+		
 	})();
 	</script>
  
