--- a/global.html
+++ b/global.html
@@ -28,7 +28,7 @@ TEST GLOBAL IFRAME
 		}
 
 		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
-		bookingWrapp.innerHTML = '<iframe sandbox id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
+		bookingWrapp.innerHTML = '<iframe sandbox="allow-same-origin" id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
 		
 	})();
 	</script>
