--- a/live.html
+++ b/live.html
@@ -9,25 +9,20 @@ TEST LIVE IFRAME
 	<div id="online-booking-wrapp">	
 	</div>
 	
-	<script>
+	 <script>
+
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.service123.co.uk/serviceplan/quote';
+		var url = 'https://demosite.edynamix-global.com/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
-		//var bookingWrappObject = document.getElementById('online-booking-wrapp-object');
-		if (queryParams) {
-			formatedParam = queryParams.replace('=', '/');
-			url += formatedParam;
 
-			//$('html, body').animate({
-			//	scrollTop: $('#online-booking').offset().top
-			//}, 500);
+		if (queryParams && queryParams.indexOf('Amend')!=-1) {
+			formatedParam = queryParams.replace('=', '/');
+			url += formatedParam;			 
 		}
 
-		//bookingWrappObject.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'		
-		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>';	
-		
+		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 	})();
 	</script>
 </body>
