--- a/global.html
+++ b/global.html
@@ -19,7 +19,7 @@
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.devservice123.com/serviceplan/quote';
+		var url = 'https://demosite.edynamix-global.com/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
