--- a/global.html
+++ b/global.html
@@ -5,7 +5,7 @@
 	IFRAME
 	<script>
 	 window.onmessage = function(e){
-    if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd') {     
+    if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd' || e.data.event_id === 'ospq_confirmed') {     
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 		bookingWrapp.innerHTML = '<object id="online-booking" data="' + e.data.page + '"  style="width:100%; height:99vh"></object>'
     }	 
