--- a/live-ob.html
+++ b/live-ob.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
+
 <html>
-	<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	</head>
-	
 <body style="margin: 0; padding: 0">
- Online Booking LIVE Iframe example
-	<div id="online-booking-wrapp">	
+	IFRAME WITHOUT THE IFRAME FIX
+ 
+	 
+	<div id="online-booking-wrapp">
 	</div>
+
 	<script>
+				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://johnroe.service123.co.uk/';
+		var url = 'https://demosite.edynamix-global.com/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
-		if (queryParams) {
+		if (queryParams && queryParams.indexOf('Amend')!=-1) {
 			formatedParam = queryParams.replace('=', '/');
-			url += formatedParam;
-
-			$('html, body').animate({
-				scrollTop: $('#online-booking').offset().top
-			}, 500);
+			url += formatedParam;			 
 		}
 
 		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
 	})();
+	  
 	</script>
 </body>
 </html>
