--- a/live-ob.html
+++ b/live-ob.html
@@ -2,7 +2,7 @@
 
 <html>
 <body style="margin: 0; padding: 0">
-	IFRAME WITHOUT THE IFRAME FIX
+	OB IFRAME WITHOUT THE IFRAME FIX
  
 	 
 	<div id="online-booking-wrapp">
