--- a/live.html
+++ b/live.html
@@ -12,7 +12,7 @@
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.edynamix-global.com/serviceplan/quote';
+		var url = 'https://demosite.service123.co.uk/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
