--- a/global.html
+++ b/global.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
+	<head> 
+    <meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 </head>
 <body style="margin: 0; padding: 0">
