--- a/global.html
+++ b/global.html
@@ -3,7 +3,7 @@
 <html>
 	<head> 
     <meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name = "viewport" content = "user-scalable=no, width=device-width">
 
 </head>
 <body style="margin: 0; padding: 0">
