--- a/global-ob.html
+++ b/global-ob.html
@@ -23,7 +23,7 @@
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://parkwaygroup.edynamix-global.com/';
+		var url = 'https://demosite.edynamix-global.com/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
