--- a/global.html
+++ b/global.html
@@ -13,7 +13,7 @@
 	 window.onmessage = function(e){
             if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd' || e.data.event_id === 'ospq_confirmed') {     
 	       var bookingWrapp = document.getElementById('online-booking-wrapp');
-	       bookingWrapp.innerHTML = '<object id="online-booking" data="' + e.data.page + '"  style="width:100%; height:99vh"></object>'
+	       bookingWrapp.innerHTML = '<object id="online-booking" src="' + e.data.page + '"  style="width:100%; height:99vh"></object>'
             }	 
         };
 		
