--- a/global.html
+++ b/global.html
@@ -12,11 +12,7 @@
 		
 	 window.onmessage = function(e){
             if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd' || e.data.event_id === 'ospq_confirmed') { 
-		         var $iframe = $('#online-booking');
-    if ( $iframe.length ) {
-        $iframe.attr('src',e.data.page);   
-    }
-	    
+		        document.getElementById('online-booking').setAttribute("src", e.data.page);
 	    
 	       //var bookingWrapp = document.getElementById('online-booking-wrapp');
 	       //bookingWrapp.innerHTML = '<object id="online-booking" data="' + e.data.page + '"  style="width:100%; height:99vh"></object>'
