--- a/global-ob.html
+++ b/global-ob.html
@@ -3,7 +3,7 @@
 <html>
 	<head> 
     <meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />
-  <meta name = "viewport" content = "initial-scale=1.0">
+  <meta name = "viewport" content = "width=device-width, initial-scale=1, user-scalable=yes">
 
 </head>
 <body style="margin: 0; padding: 0">
