--- a/global-ob.html
+++ b/global-ob.html
@@ -29,7 +29,7 @@
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.edynamix-global.com';
+		var url = 'https://demosite.devservice123.com';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
