--- a/live.html
+++ b/live.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 
 <html>
+	<head> 
+    <meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />
+  <meta name = "viewport" content = "user-scalable=no, width=device-width">
+
+</head>
 <body style="margin: 0; padding: 0">
-	IFRAME WITHOUT THE IFRAME FIX
- 
+	IFRAME
+	<script>		
+	 window.onmessage = function(e){
+            if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd' || e.data.event_id === 'ospq_confirmed') { 
+		        document.getElementById('online-booking').setAttribute("src", e.data.page);	    
+	       //var bookingWrapp = document.getElementById('online-booking-wrapp');
+	       //bookingWrapp.innerHTML = '<object id="online-booking" data="' + e.data.page + '"  style="width:100%; height:99vh"></object>'
+            }	 
+        };		
+	</script>
 	 
 	<div id="online-booking-wrapp">
-	</div>
+	</div>	 
 
 	<script>
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.service123.co.uk/serviceplan/quote/';
+		var url = 'https://demosite.service123.co.uk/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
@@ -21,9 +34,9 @@
 			url += formatedParam;			 
 		}
 
-		bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
-	})();
-	  
+		//bookingWrapp.innerHTML = '<object id="online-booking" data="' + url + '"  style="width:100%; height:99vh"></object>'
+		bookingWrapp.innerHTML = '<iframe id="online-booking" src="' + url + '"  style="width:100%; height:99vh"></iframe>'
+			})();	  
 	</script>
 </body>
 </html>
