--- a/global.html
+++ b/global.html
@@ -29,7 +29,7 @@
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.edynamix-global.com/serviceplan/quote';
+		var url = 'https://lindop.edynamix-global.com/serviceplan/quote';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
