--- a/global-old.html
+++ b/global-old.html
@@ -17,7 +17,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://dackcoventry.edynamix-global.com/serviceplan/quote/';
+		var url = 'https://demosite.edynamix-global.com/serviceplan/quote/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
