--- a/global-ob-test.html
+++ b/global-ob-test.html
@@ -49,7 +49,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 				
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demoivhcuk.edynamix-global.com?iframe-v2=true';
+		var url = 'https://parkwaygroup.edynamix-global.com?iframe-v2=true';
 		//var url = 'https://www.researchgg.co.uk/service/';
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
