--- a/global-ob-test.html
+++ b/global-ob-test.html
@@ -56,7 +56,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 		bookingWrapp.innerHTML = '<iframe frameborder="0" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>'
 	})();
 		
-		//document.getElementById("online-booking").height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+		document.getElementById("online-booking").height = window.innerHeight;// || document.documentElement.clientHeight || document.body.clientHeight;
 	
 		
 	</script>
