--- a/live-ob.html
+++ b/live-ob.html
@@ -37,7 +37,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 		
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demoivhcuk.service123.co.uk/serviceplan/quote?iframe-v2=true';		
+		var url = 'https://demoivhcuk.service123.co.uk?iframe-v2=true';		
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
