--- a/live-ob.html
+++ b/live-ob.html
@@ -44,10 +44,10 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 	    if (e.data.event_id === 'scroll_top_of_el' || e.data.event_id === 'scroll_bottom_of_el') { 	
 		    
 gtag('event', 'workflowevent', {
-'Flow :: workflow name': tgb_ttc_booking, 
+'Flow :: workflow name': 'tgb_ttc_booking', 
 'Flow :: workflow step number': 1, 
 'Flow :: conversion flag': 0, 
-'Content :: component name': tgb_ttc_booking
+'Content :: component name': 'tgb_ttc_booking'
 }
 );
 
