--- a/live-ob-hor.html
+++ b/live-ob-hor.html
@@ -15,7 +15,10 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 	<div id="online-booking-wrapp">
 	</div>	 
 
-	<script>
+	 	<script>
+	
+	var url = 'https://demosite.devservice123.com';	
+	
 	document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 	document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
 		
@@ -34,10 +37,15 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 			document.getElementById("online-booking").height = e.data.height;				
         } 			
     };
-		
+	
+
+	function sendMessage(){
+		var iframeWin = document.getElementById("online-booking").contentWindow;
+		iframeWin.postMessage(window.location.href, url);        
+	}		
+	
 	(function () {
-		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demosite.service123.co.uk?iframe-v2=true';		
+		var queryParams = document.location.search.split('?')[1];		
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
@@ -45,11 +53,12 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 			formatedParam = queryParams.replace('=', '/');
 			url += formatedParam;			 
 		}
+		url += "?iframe-v2=true";
+		bookingWrapp.innerHTML = '<iframe frameborder="0" onload="sendMessage()" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>';
 		
-		bookingWrapp.innerHTML = '<iframe frameborder="0" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>'
 	})();
-		
-	document.getElementById("online-booking").height = window.innerHeight; 	
+	
+	document.getElementById("online-booking").height = window.innerHeight;	
 		
 	</script>
 	<div>
